// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeneratedNonThrowingEndpointResponse > getReturnResponseStatements > generates ok response with deserialized body for json response 1`] = `
"if (_response.ok) {
    return { data: deserialize(_response.body), rawResponse: _response.rawResponse };
}
return { data: buildUnknown(_response.error), rawResponse: _response.rawResponse };"
`;

exports[`GeneratedNonThrowingEndpointResponse > getReturnResponseStatements > generates ok response with undefined body when no response type 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
return { data: buildUnknown(_response.error), rawResponse: _response.rawResponse };"
`;

exports[`GeneratedNonThrowingEndpointResponse > getReturnResponseStatements > generates property error switch for property discrimination 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    switch ((_response.error.body as RawError)?.errorType) {
        case "BadRequest": return { data: deserializeError(_response.error.body as RawError), rawResponse: _response.rawResponse };
    }
}
return { data: buildUnknown(_response.error), rawResponse: _response.rawResponse };"
`;

exports[`GeneratedNonThrowingEndpointResponse > getReturnResponseStatements > generates status code error switch for status code discrimination 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    switch (_response.error.statusCode) {
        case 400: return { data: buildError(400), rawResponse: _response.rawResponse };
        case 404: return { data: buildError(404), rawResponse: _response.rawResponse };
    }
}
return { data: buildUnknown(_response.error), rawResponse: _response.rawResponse };"
`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > cursor pagination > returns cursor pagination info 1`] = `"response?.nextCursor != null && !(typeof response?.nextCursor === "string" && response?.nextCursor === "")"`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > cursor pagination > returns cursor pagination info 2`] = `"response?.items ?? []"`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > offset pagination > returns offset pagination info without step 1`] = `"(response?.items ?? []).length > 0"`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > offset pagination > returns offset pagination info without step 2`] = `"response?.items ?? []"`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > offset pagination > returns offset-step pagination info with step and item-index semantics 1`] = `"(response?.items ?? []).length >= Math.floor((request?.limit ?? 1))"`;

exports[`GeneratedThrowingEndpointResponse > getPaginationInfo > offset pagination > uses hasNextPage property when available 1`] = `"response?.hasMore ?? (response?.items ?? []).length > 0"`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates HEAD method response with headers 1`] = `
"if (_response.ok) {
    return { data: _response.rawResponse.headers, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    throw new GenericAPIError(_response.error.statusCode, _response.error.body);
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "HEAD", "/test");"
`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates file download with content headers 1`] = `
"if (_response.ok) {
    const _contentLength = getHeader("Content-Length");
    return { data: {
            data: _response.body,
            contentLengthInBytes: _contentLength != null ? Number(_contentLength) : undefined,
            contentType: getHeader("Content-Type")
        }, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    throw new GenericAPIError(_response.error.statusCode, _response.error.body);
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "POST", "/test");"
`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates return statements for json response 1`] = `
"if (_response.ok) {
    return { data: deserialize(_response.body), rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    throw new GenericAPIError(_response.error.statusCode, _response.error.body);
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "POST", "/test");"
`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates return statements for no response 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    throw new GenericAPIError(_response.error.statusCode, _response.error.body);
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "POST", "/test");"
`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates return statements with property error discrimination 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    switch ((_response.error.body as any)?.["errorName"]) {
        case "BadRequest": throw new SdkError(deserializeError(_response.error.body));
        case "NotFound": throw new SdkError(deserializeError(_response.error.body));
        default: throw new GenericAPIError(_response.error.statusCode, _response.error.body);
    }
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "POST", "/test");"
`;

exports[`GeneratedThrowingEndpointResponse > getReturnResponseStatements > generates return statements with status code error discrimination 1`] = `
"if (_response.ok) {
    return { data: undefined, rawResponse: _response.rawResponse };
}
if (_response.error.reason === "status-code") {
    switch (_response.error.statusCode) {
        case 400: throw new SdkError(deserializeError(_response.error.body));
        case 404: throw new SdkError(deserializeError(_response.error.body));
        default: throw new GenericAPIError(_response.error.statusCode, _response.error.body);
    }
}
return handleNonStatusCodeError(_response.error, _response.rawResponse, "POST", "/test");"
`;
